# edge-detection

./: .gitignore  CMakeLists.txt  algorithm.cpp  algorithm.hpp  channel_count_test.cpp  io.cpp  io.hpp  main.cpp  read.cpp  read.hpp  utility.hpp  write.cpp  write.hpp
